--- a/app/assets/sass/components/_stages.scss
+++ b/app/assets/sass/components/_stages.scss
@@ -9,6 +9,8 @@ ol {
   counter-reset: stage;
   margin-left: 1em;
   padding-left: 2em;
+  margin-top: 30px;
+  margin-bottom: 30px;
 
   li {
     margin-bottom: 3em;
