--- a/app/views/all-sections.html
+++ b/app/views/all-sections.html
@@ -37,7 +37,7 @@
 
       <!-- Change the page title here -->
       <h2>
-        Build your Solution page - All sections
+        Build your Solution page - All section
       </h2>
 
       <p class="nhsuk-u-margin-bottom-5">
