--- a/app/views/browsers-supported.html
+++ b/app/views/browsers-supported.html
@@ -62,8 +62,8 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-three-quarters">
       {{ checkboxes({
-        "idPrefix": "client-application-type",
-        "name": "client-application-type",
+        "idPrefix": "browsers-supported",
+        "name": "browsers-supported",
         "fieldset": {
           "legend": {
             "html": "<b>What browsers are supported? Select all that apply*</b>"
