--- a/app/views/client-application-type.html
+++ b/app/views/client-application-type.html
@@ -59,7 +59,7 @@
     <div class="nhsuk-grid-column-three-quarters">
       {{ checkboxes({
         "idPrefix": "client-application-type",
-        "name": "client-application-type"
+        "name": "client-application-type",
         "fieldset": {
           "legend": {
             "html": "<b>Select the client application types your Solution supports*</b>"
