--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -29,6 +29,16 @@ p {
   margin-bottom: 0;
 }
 
+#client-type-section-1 {
+  display: none;
+}
+#client-type-section-2 {
+  display: none;
+}
+#client-type-section-3 {
+  display: none;
+}
+
 .govuk-hint {
   padding-bottom:10px;
 }
