--- a/app/views/client-application-type.html
+++ b/app/views/client-application-type.html
@@ -89,6 +89,7 @@
     <div class="nhsuk-grid-row nhsuk-u-padding-top-7">
       <div class="nhsuk-grid-column-three-quarters">
         {{ button({
+          "href": "all-sections",
           "text": "Save and return to all sections"
         }) }}
 
