--- a/app/views/browser-based-plug-ins.html
+++ b/app/views/browser-based-plug-ins.html
@@ -102,6 +102,7 @@
     <div class="nhsuk-grid-row nhsuk-u-padding-top-7">
       <div class="nhsuk-grid-column-three-quarters">
         {{ button({
+          "href": "browser-based",
           "text": "Save and return"
         }) }}
 
