--- a/app/views/contact-details.html
+++ b/app/views/contact-details.html
@@ -152,17 +152,16 @@
           "text": "Email address"
         },
         "id": "input-with-hint-text",
-        "name": "email
-        ",
+        "name": "email",
         "classes": "nhsuk-input--width-20"
         }) }}
-
       </div>
     </div>
 
     <div class="nhsuk-grid-row nhsuk-u-padding-top-7">
       <div class="nhsuk-grid-column-three-quarters">
         {{ button({
+          "href": "all-sections",
           "text": "Save and return to all sections"
         }) }}
 
