--- a/app/views/desktop-memory-storage.html
+++ b/app/views/desktop-memory-storage.html
@@ -222,6 +222,7 @@
     <div class="nhsuk-grid-row nhsuk-u-padding-top-7">
       <div class="nhsuk-grid-column-three-quarters">
         {{ button({
+          "href": "native-desktop",
           "text": "Save and return"
         }) }}
 
