--- a/app/views/integrations.html
+++ b/app/views/integrations.html
@@ -82,6 +82,7 @@
     <div class="nhsuk-grid-row nhsuk-u-padding-top-7">
       <div class="nhsuk-grid-column-three-quarters">
         {{ button({
+          "href": "all-sections",
           "text": "Save and return to all sections"
         }) }}
 
