--- a/app/views/browsers-supported.html
+++ b/app/views/browsers-supported.html
@@ -136,6 +136,7 @@
     <div class="nhsuk-grid-row nhsuk-u-padding-top-7">
       <div class="nhsuk-grid-column-three-quarters">
         {{ button({
+          "href": "browser-based",
           "text": "Save and return"
         }) }}
 
