--- a/app/views/desktop-supported-operating-systems.html
+++ b/app/views/desktop-supported-operating-systems.html
@@ -79,6 +79,7 @@
     <div class="nhsuk-grid-row nhsuk-u-padding-top-7">
       <div class="nhsuk-grid-column-three-quarters">
         {{ button({
+          "href": "native-desktop",
           "text": "Save and return"
         }) }}
 
