--- a/app/views/native-mobile-hardware-requirements.html
+++ b/app/views/native-mobile-hardware-requirements.html
@@ -76,6 +76,7 @@
     <div class="nhsuk-grid-row nhsuk-u-padding-top-7">
       <div class="nhsuk-grid-column-three-quarters">
         {{ button({
+          "href": "native-mobile-or-tablet",
           "text": "Save and return"
         }) }}
 
