--- a/app/views/native-mobile-memory-storage.html
+++ b/app/views/native-mobile-memory-storage.html
@@ -120,6 +120,7 @@
     <div class="nhsuk-grid-row nhsuk-u-padding-top-7">
       <div class="nhsuk-grid-column-three-quarters">
         {{ button({
+          "href": "native-mobile-or-tablet",
           "text": "Save and return"
         }) }}
 
