--- a/app/views/native-mobile-operating-systems.html
+++ b/app/views/native-mobile-operating-systems.html
@@ -106,6 +106,7 @@
     <div class="nhsuk-grid-row nhsuk-u-padding-top-7">
       <div class="nhsuk-grid-column-three-quarters">
         {{ button({
+          "href": "native-mobile-or-tablet",
           "text": "Save and return"
         }) }}
 
