--- a/app/views/all-sections.html
+++ b/app/views/all-sections.html
@@ -45,6 +45,7 @@
       </p>
 
       {{ button({
+        "href": "marketing-page",
         "text": "Preview Marketing page",
         "classes": "nhsuk-button--secondary"
       }) }}
