edits befor research session 1

--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -43,6 +43,12 @@ p {
   float: right;
 }
 
+.sticky {
+  position: fixed;
+  top: 10px;
+  width: 33.3333%;
+}
+
 .nhsuk-table__body {
   width: 50%;
   vertical-align: top;
