--- a/app/views/marketing-page.html
+++ b/app/views/marketing-page.html
@@ -38,7 +38,7 @@
 {% block content %}
   <div class="nhsuk-grid-row">
 
-    <div class="nhsuk-grid-column-one-third">
+    <div id="contents" class="nhsuk-grid-column-one-third">
       {{ contentsList({
         items: [
           {
@@ -371,17 +371,17 @@
       <div id="nhs-integrations">
         <div class="nhsuk-table-responsive nhsuk-u-margin-bottom-0">
           <table class="nhsuk-table">
-            <caption class="nhsuk-table__caption">Integrations (assured by NHS) (16 systems)</caption>
+            <caption class="nhsuk-table__caption">Integrations - NHS assured (16 systems)</caption>
             <thead class="nhsuk-table__head">
               <tr class="nhsuk-table__row">
-                <th class="nhsuk-table__header" scope="col"><h3 class="nhsuk-u-margin-bottom-0">Integrations (assured by NHS) (16 systems)</h3></th>
+                <th class="nhsuk-table__header" scope="col"><h3 class="nhsuk-u-margin-bottom-0">Integrations - NHS assured (16 systems)</h3></th>
               </tr>
             </thead>
           </table>
         </div>
         <div class="nhsuk-table-responsive nhsuk-u-margin-0">
           <table class="nhsuk-table">
-            <caption class="nhsuk-table__caption">Integrations (assured by NHS) (16 systems)</caption>
+            <caption class="nhsuk-table__caption">Integrations - NHS assured (16 systems)</caption>
             <tbody class="nhsuk-table__body">
               <tr class="nhsuk-table__row">
                 <td class="nhsuk-table__cell">These Integrations are assured and added by the NHS.</td>
@@ -438,10 +438,10 @@
       <div id="supplier-integrations">
         <div class="nhsuk-table-responsive nhsuk-u-margin-bottom-0">
           <table class="nhsuk-table">
-            <caption class="nhsuk-table__caption">Integrations (Supplier asserted)</caption>
+            <caption class="nhsuk-table__caption">Integrations - supplier asserted</caption>
             <thead class="nhsuk-table__head">
               <tr class="nhsuk-table__row">
-                <th class="nhsuk-table__header" scope="col"><h3 class="nhsuk-u-margin-bottom-0">Integrations (Supplier asserted)</h3></th>
+                <th class="nhsuk-table__header" scope="col"><h3 class="nhsuk-u-margin-bottom-0">Integrations - supplier asserted</h3></th>
               </tr>
                 <tr class="nhsuk-table__row">
                   <td class="nhsuk-table__header" scope="col">These Integrations are added by the Supplier and are not assured by the NHS and may be partial therefore may not fully integrate with the system.</td>
@@ -451,7 +451,7 @@
         </div>
         <div class="nhsuk-table-responsive nhsuk-u-margin-0">
           <table class="nhsuk-table">
-            <caption class="nhsuk-table__caption">Integrations (Supplier asserted)</caption>
+            <caption class="nhsuk-table__caption">Integrations - supplier asserted</caption>
             <tbody class="nhsuk-table__body">
               <tr class="nhsuk-table__row">
                 <td class="nhsuk-table__cell">
@@ -662,17 +662,17 @@
       <div id="standards-met">
         <div class="nhsuk-table-responsive nhsuk-u-margin-bottom-0">
           <table class="nhsuk-table">
-            <caption class="nhsuk-table__caption">NHS Standards met (assured by NHS) </caption>
+            <caption class="nhsuk-table__caption">NHS Standards met - NHS assured </caption>
             <thead class="nhsuk-table__head">
               <tr class="nhsuk-table__row">
-                <th class="nhsuk-table__header" scope="col"><h3 class="nhsuk-u-margin-bottom-0">NHS Standards met (assured by NHS)</h3></th>
+                <th class="nhsuk-table__header" scope="col"><h3 class="nhsuk-u-margin-bottom-0">NHS Standards met - NHS assured</h3></th>
               </tr>
             </thead>
           </table>
         </div>
         <div class="nhsuk-table-responsive nhsuk-u-margin-0">
           <table class="nhsuk-table">
-            <caption class="nhsuk-table__caption">NHS Standards met (assured by NHS)</caption>
+            <caption class="nhsuk-table__caption">NHS Standards met - NHS assured</caption>
             <tbody class="nhsuk-table__body">
               <tr class="nhsuk-table__row">
                 <td class="nhsuk-table__cell">If all ‘Must’ Epics have been met, the Capability is Full. If some 'Must' Epics have not been met the Capability is Partial.</td>
