--- a/app/views/solution-description.html
+++ b/app/views/solution-description.html
@@ -66,7 +66,8 @@
          },
          hint: {
            html: "Your text from Stage 1, Solution registration has been automatically inserted but can be edited."
-         }
+         },
+         value: "Really Kool Document Manager is one of the most popular document management suites in the UK. Our system is designed to be a complete document management solution that focuses on usability and clinical safety."
        }) }}
 
        {{ govukCharacterCount({
