--- a/app/views/browser-based-connectivity.html
+++ b/app/views/browser-based-connectivity.html
@@ -128,7 +128,7 @@
           "id": "select-2",
           "name": "select-2",
           "label": {
-            "html": "<b>Select the recommended desktop aspect ratio and screen resolution?</b>"
+            "html": "<b>Select the minimum desktop aspect ratio and screen resolution?</b>"
           },
           "hint": {
             "text": "Please select below the minimum resolution required for your Solution to function on desktop."
