--- a/app/views/browser-based.html
+++ b/app/views/browser-based.html
@@ -66,20 +66,20 @@
         "task": [
           {
             "URL": "browsers-supported",
-            "title": "Browsers supported",
-            "requirement": "*Mandatory",
+            "title": "Browsers supported*",
+            "requirement": "Mandatory",
             "status": "complete"
           },
           {
             "URL": "browser-based-plug-ins",
-            "title": "Plug-ins or extensions",
-            "requirement": "*Mandatory",
+            "title": "Plug-ins or extensions*",
+            "requirement": "Mandatory",
             "status": "complete"
           },
           {
             "URL": "browser-based-connectivity",
-            "title": "Connectivity and resolution",
-            "requirement": "*Mandatory",
+            "title": "Connectivity and resolution*",
+            "requirement": "Mandatory",
             "status": "incomplete"
           },
           {
