--- a/app/views/native-desktop.html
+++ b/app/views/native-desktop.html
@@ -66,20 +66,20 @@
         "task": [
           {
             "URL": "desktop-supported-operating-systems",
-            "title": "Supported operating systems",
-            "requirement": "*Mandatory",
+            "title": "Supported operating systems*",
+            "requirement": "Mandatory",
             "status": "complete"
           },
           {
             "URL": "desktop-connection-details",
-            "title": "Connection details",
-            "requirement": "*Mandatory",
+            "title": "Connection details*",
+            "requirement": "Mandatory",
             "status": "complete"
           },
           {
             "URL": "desktop-memory-storage",
-            "title": "Memory, storage, processing and aspect ratio",
-            "requirement": "*Mandatory",
+            "title": "Memory, storage, processing and aspect ratio*",
+            "requirement": "Mandatory",
             "status": "incomplete"
           },
           {
