--- a/app/views/native-mobile-or-tablet.html
+++ b/app/views/native-mobile-or-tablet.html
@@ -66,8 +66,8 @@
         "task": [
           {
             "URL": "native-mobile-operating-systems",
-            "title": "Supported operating systems",
-            "requirement": "*Mandatory",
+            "title": "Supported operating systems*",
+            "requirement": "Mandatory",
             "status": "complete"
           },
           {
@@ -78,8 +78,8 @@
           },
           {
             "URL": "native-mobile-memory-storage",
-            "title": "Memory and storage",
-            "requirement": "*Mandatory",
+            "title": "Memory and storage*",
+            "requirement": "Mandatory",
             "status": "incomplete"
           },
           {
