--- a/app/views/desktop-additional.html
+++ b/app/views/desktop-additional.html
@@ -64,7 +64,7 @@
          maxlength: 500,
          rows: 8,
          label: {
-           html: "<b>Do you have any additional native mobile or tablet application information?</b>"
+           html: "<b>Do you have any additional native desktop application information?</b>"
          },
          hint: {
            text: "Add any additional information or requirements your Solution needs to function."
