--- a/app/views/native-mobile-or-tablet.html
+++ b/app/views/native-mobile-or-tablet.html
@@ -84,7 +84,7 @@
           },
           {
             "URL": "native-mobile-third-party-device",
-            "title": "Third party components and device specifications",
+            "title": "Third party components and device capabilities",
             "requirement": "Optional",
             "status": "incomplete"
           },
