--- a/app/views/native-mobile-third-party-device.html
+++ b/app/views/native-mobile-third-party-device.html
@@ -45,7 +45,7 @@
 
       <!-- Change the page title here -->
       <h2>
-        Native mobile or tablet - third party components and device specifications
+        Native mobile or tablet - third party components and device capabilities
       </h2>
 
       <h4 class="nhsuk-body-l">Answer the following questions about your mobile or tablet based Solution</h4>
@@ -72,15 +72,15 @@
          }) }}
 
          {{ govukCharacterCount({
-            name: "device-specifications",
-            id: "device-specifications",
+            name: "device-capabilities",
+            id: "device-capabilities",
             maxlength: 500,
             rows: 8,
             label: {
-              html: "<b>Describe any device specifications</b>"
+              html: "<b>Describe any device capabilities</b>"
             },
             hint: {
-              text: "Add information about the device specifications required for your Solution to function."
+              text: "Add information about the device capabilities required for your Solution to function."
             }
           }) }}
       </div>
