--- a/app/views/all-sections.html
+++ b/app/views/all-sections.html
@@ -81,8 +81,8 @@
                   },
                   {
                     "URL": "integrations",
-                    "title": "Integrations*",
-                    "requirement": "Mandatory",
+                    "title": "Integrations",
+                    "requirement": "Optional",
                     "status": "incomplete"
                   }
                 ]
