change hosting requirements

--- a/app/views/on-premise.html
+++ b/app/views/on-premise.html
@@ -60,7 +60,7 @@
          maxlength: 500,
          rows: 8,
          label: {
-           html: "<b>Summarise your requirements*</b>"
+           html: "<b>Summarise your requirements</b>"
          },
          hint: {
            text: "Add a description of your Solutions on premise hosting requirements"
