--- a/app/views/about-supplier.html
+++ b/app/views/about-supplier.html
@@ -63,7 +63,7 @@
            html: "<b>Write a description about your organisation</b>"
          },
          hint: {
-           text: "This description will give the buyer more insight into you as a supplier and the qualitites you can provide."
+           text: "This description will give the buyer more insight into you as a supplier and the qualities you can provide."
          }
        }) }}
 
