--- a/app/views/solution-description.html
+++ b/app/views/solution-description.html
@@ -79,7 +79,7 @@
             html: "<b>Write a description about your Solution</b>"
           },
           hint: {
-            text: "This description will give the buyer more insight into your Solution and the qualitites it can provide."
+            text: "This description will give the buyer more insight into your Solution and the qualities it can provide."
           }
         }) }}
 
